# umsl-cmp-sci-4500-project-snapshot-2019-05-08

./: CMakeLists.txt  LICENSE
src/: log.c  log.cpp  log.h  main.c  service.c  service.h
src/service/: console.h  face.h  monitor.h  python.h  speech.h
src/service/console/: console.c
src/service/face/: face.c
src/service/monitor/: monitor.c
src/service/python/: python.c
src/service/speech/: speech.c
